--- a/assets/style.css
+++ b/assets/style.css
@@ -12,12 +12,13 @@ body {
 h1 {
   margin: 15px;
   color: var(--text);
-  font-size: 2.5rem;
+  font-size: 2rem;
   text-align: center;
+  font-weight: 600;
 }
-.search-container {
+.viewport-container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   width: 100vw;
   height: 100vh;
   justify-content: center;
@@ -25,10 +26,11 @@ h1 {
   background-color: var(--background);
 }
 
-.search-box {
+.search-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 80vmin;
   padding: 10px;
   background-color: var(--search-box);
   border-radius: 10px;
@@ -41,11 +43,11 @@ h1 {
 #search-field {
   margin: 3px;
   box-sizing: border-box;
-  width: 85vmin;
+  width: 100%;
   height: 40px;
   font-family: "Quicksand", sans-serif;
   font-weight: 700;
-  font-size: 1.25rem;
+  font-size: 1rem;
   letter-spacing: 1px;
   border-radius: 5px;
   border: 1px solid white;
@@ -54,7 +56,7 @@ h1 {
 #search-format {
   margin: 3px;
   box-sizing: border-box;
-  width: 85vmin;
+  width: 100%;
   height: 40px;
   font-family: "Quicksand", sans-serif;
   font-weight: 700;
@@ -68,7 +70,7 @@ h1 {
   background-color: #ffb803b6;
   margin: 3px;
   box-sizing: border-box;
-  width: 85vmin;
+  width: 100%;
   height: 40px;
   font-family: "Quicksand", sans-serif;
   font-weight: 700;
@@ -81,4 +83,16 @@ h1 {
 
 #search-button:hover {
   background-color: #fb8500;
+}
+
+/* change page to load results */
+.viewport-container-results {
+  align-items: flex-start;
+}
+
+.search-container-results {
+  /* align-items: flex-start; */
+  width: 22vw;
+  height: 100vh;
+  border-radius: 0px;
 }
